--- a/docker-main/Dockerfile
+++ b/docker-main/Dockerfile
@@ -28,7 +28,7 @@ RUN curl -L get.rexify.org | perl - --sudo -n Rex
 RUN apt-get install -y apache2
 
 # Dependencies of the plumbing code
-RUN apt-get -y install liblog-message-perl
+RUN apt-get -y install liblog-message-perl libfuture-perl libio-async-perl libset-scalar-perl
 
 # Remove all setuid privileges to lock down non-root users in the container
 RUN find / -xdev -perm /u=s,g=s -print -exec chmod u-s,g-s '{}' \;
