Serving the actual UI on http://<docker>/

--- a/plumbing/apache2.conf
+++ b/plumbing/apache2.conf
@@ -24,4 +24,5 @@ ServerName blueboxnoc.epfl.ch
 Listen 80
 DocumentRoot /var/www/html
 
-ProxyPass / http://localhost:8001/
+# node UI:
+ProxyPass / http://localhost:3000/
