Run node.js tests (incl. webdriver) in Docker
* Install latest Chrome (procedure inspired from
  robcherry/docker-selenium on the DockerHub) and Chromedriver

* node tests run under Xvfb; x11vnc is available to take a peek in case
  tests fail

* run_all_tests_from_docker.sh now accepts --noperl, --nonode, --debug
  flags (propagated from test.sh). --debug causes to drop to a shell in
  case of failed tests

* EPFLSTI::Docker::Paths::srv_dir : stop assuming that running under
  Docker always means prod

--- a/devsupport/docker-tests/Dockerfile
+++ b/devsupport/docker-tests/Dockerfile
@@ -1,7 +1,6 @@
 # Run the Blue Box NOC's tests in a Docker image
 #
-# The tests are run as part of the develop_noc.sh script, and can be
-# re-run with .
+# Run the test.sh script to rebuild the Docker image and re-run the tests.
 #
 # To test out your changes:
 #   1. Install Docker as per the instructions at
@@ -14,4 +13,40 @@
 FROM epflsti/blueboxnoc
 MAINTAINER Dominique Quatravaux <dominique.quatravaux@epfl.ch>
 
+########################################################################
+# General-purpose stuff
+RUN apt-get -y install \
+  # Handy for debugging failing tests:
+  strace \
+  # Needed below
+  unzip
+
+########################################################################
+# Dependencies of the Perl tests
 RUN cpanm Test::Group
+
+########################################################################
+# Dependencies of the node.js tests
+RUN npm install -g mocha
+
+# Latest chrome - Procedure inspired from
+# https://registry.hub.docker.com/u/robcherry/docker-selenium/dockerfile/
+RUN curl -sL https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -
+RUN echo "deb http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list
+RUN apt-get -y update
+RUN apt-get -y install google-chrome-stable
+# Disable the SUID sandbox so that Chrome can launch without being in a privileged container.
+RUN echo "#!/bin/bash\nexec /opt/google/chrome/google-chrome --disable-setuid-sandbox \"\$@\"" > /usr/local/bin/google-chrome
+RUN chmod 755 /usr/local/bin/google-chrome
+
+# fake X11 support (x11vnc is available to debug failing tests)
+RUN apt-get -y install xvfb x11vnc
+
+# Chromedriver
+RUN curl -sL https://chromedriver.storage.googleapis.com/`curl -sL https://chromedriver.storage.googleapis.com/LATEST_RELEASE`/chromedriver_linux64.zip > /tmp/chromedriver_linux64.zip
+RUN cd /usr/local/bin; unzip /tmp/chromedriver_linux64.zip
+RUN chmod 755 /usr/local/bin/chromedriver
+
+########################################################################
+EXPOSE 5900
+
