--- a/blueboxnoc-ui/package.json
+++ b/blueboxnoc-ui/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "mocha": "^2.1.0",
     "selenium-webdriver": "^2.44.0",
-    "temp": "^0.8.1"
+    "temp": "^0.8.1",
+    "when": "^3.7.2"
   }
 }
