--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ install:
   - sudo sh -c "echo deb http://get.docker.io/ubuntu docker main > /etc/apt/sources.list.d/docker.list"
   - sudo apt-get update || true
   - sudo mkdir -p /var/lib/docker
+  - sudo cp /bin/true /sbin/start
   - echo exit 101 | sudo tee /usr/sbin/policy-rc.d
   - sudo chmod +x /usr/sbin/policy-rc.d
   - sudo apt-get install -y slirp lxc aufs-tools cgroup-lite
