Get a version of ng-admin that has https://github.com/marmelab/ng-admin/pull/342

--- a/blueboxnoc-ui/bower.json
+++ b/blueboxnoc-ui/bower.json
@@ -23,6 +23,6 @@
     "tests"
   ],
   "dependencies": {
-    "ng-admin": "marmelab/ng-admin"
+    "ng-admin": "vasiakorobkin/ng-admin#uneditable_reference"
   }
 }
