Have chrome soldier on if /proc/cpuinfo lacks SSE2
When running under uml (for Travis), /proc/cpuinfo is all wrong and
the /opt/google/chrome/google-chrome script thinks that Chrome will be
unable to run, because the SSE2 instruction set seems to be missing on
the platform. Neuter this logic in the wrapper script, so that unit
tests may finally run on Travis (in Docker, itself in uml).

Rebuilt and re-pushed epflsti/blueboxnoc-tests

--- a/devsupport/docker-tests/Dockerfile
+++ b/devsupport/docker-tests/Dockerfile
@@ -44,6 +44,9 @@ RUN apt-get install -y unzip
 RUN curl -sL https://chromedriver.storage.googleapis.com/`curl -sL https://chromedriver.storage.googleapis.com/LATEST_RELEASE`/chromedriver_linux64.zip > /tmp/chromedriver_linux64.zip
 RUN cd /usr/local/bin; unzip /tmp/chromedriver_linux64.zip
 RUN chmod 755 /usr/local/bin/chromedriver
+# Don't let /opt/google/chrome/google-chrome second-guess whether SSE2
+# is enabled (/proc/cpuinfo is all wrong in Travis because uml)
+RUN perl -i -pe 'm|/proc/cpuinfo| or next; $_ = "true\n"' /opt/google/chrome/google-chrome
 
 ########################################################################
 EXPOSE 5900
